Fix issue with search box text getting cut off on certain screen sizes

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 }
 
 #search-box {
+    min-width: 30rem;
     font-size: 1.75rem;
     padding: 0.5rem;
     text-align: center;
